--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,6 +1,18 @@
-<div>
-  <label>name:
-    <input [(ngModel)] = "senator.name" placeholder="name"/>
-<div><span>ID: </span>{{senator.id}}</div>
-<div><span>state: </span>{{senator.state}}</div>
-<div><span>party: </span>{{senator.party}}</div>
+<h2>LIST OF SENATORS</h2>
+<ul class="senators">
+  <li *ngFor="let senator of senators"
+  [class.selected]="senator === selectedSenator"
+   (click)=onSelect(senator)>
+    <span class="badge">{{senator.id}}</span>{{senator.name}}
+    </li>
+    </ul>
+
+    <div *ngIf="selectedSenator"
+  <h2>{{selectedSenator.name | uppercase}} Details 
+    <div><span>id: </span>{{selectedSenator.id}}</div>
+    <div>
+      <label>name:
+        <input [(ngModel)]="selectedSenator.name" placeholder="name" />
+        </label>
+        </div>
+        </div>
