--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,11 @@
 h1{
-  color: blue;
+  color: red;
+  text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
+  border-style: solid;
+  border-color: transparent;
+  border-bottom-color: white;
 }
 
 h2,h3{
@@ -12,6 +16,7 @@ h2,h3{
 
 body{
   margin: 2em;
+  background-color: blue;
 }
 
 body, input[type="text"],button{
