--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,6 @@ body{
   margin: 2em;
   background-color: blue;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
