--- a/src/app/senators/senators.component.html
+++ b/src/app/senators/senators.component.html
@@ -1,9 +1,9 @@
 <h2>LIST OF SENATORS</h2>
 <ul class="senators">
   <div>
-    <div fxLayout="row wrap" fxLayoutAlign="center stretch"  fxLayoutGap="10px" flex-wrap="wrap">
+    <div fxLayout="row" fxLayoutAlign="center stretch"  fxLayoutGap="10px" flex-wrap="wrap">
 <ul >
-  <li fxFlex="50%"  *ngFor="let senator of senators"
+  <li *ngFor="let senator of senators"
   [class.selected]="senator === selectedSenator"
    (click)="onSelect(senator)">
     <span class="badge">{{senator.id}}</span>{{senator.name}}
@@ -11,14 +11,5 @@
 </ul>
     </div>
 </div>
+<app-senator-detail [senator]="selectedSenator"></app-senator-detail>
 <br><br>
-    <div *ngIf="selectedSenator">
-  <h2>{{selectedSenator.name | uppercase}} Details
-    <div><span>ID: </span>{{selectedSenator.id}}</div>
-    <div>
-      <label>name:
-        <input [(ngModel)]="selectedSenator.name" placeholder="name" />
-        </label>
-        <div><span>STATE: </span>{{selectedSenator.state}}</div>
-        <div><span>PARTY: </span>{{selectedSenator.party}}</div>
-        </div>
